--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         <button type="submit" class="cta-button">Send Message</button>
                     </form>
                     <div class="social-icons">
-                        <a href="https://www.instagram.com/joshi.lalit.2006/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/joshi_.lalit/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                         <a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                         <a href="#" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
                     </div>
