--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                     </form>
                     <div class="social-icons">
                         <a href="https://www.instagram.com/joshi_.lalit/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                        <a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                        <a href="www.linkedin.com/in/lalitmjoshi-tech" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://github.com/lalitjoshidev/" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </div>
